--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,37 @@ body {
     border-radius: 10px;
 }
 
+.picture-part:hover .overlay {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    background-color: var(--colour-cyan);
+    border-radius: 10px;
+}
+
+.picture-view {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    display: none;
+}
+
+.picture-part:hover .overlay + .picture-view {
+    display: block;
+}
+
 div h2 {
     color: var(--colour-white);
     margin: 1.4rem 0 0.75rem;
